# LP_MP-Cut

./: .gitmodules  CMakeLists.txt  README.md
include/: cut_constructor_base.hxx
include/multicut/: multicut.h  multicut_constructor.hxx
src/: CMakeLists.txt
src/multicut/: CMakeLists.txt  generate_solvers.py  lifted_multicut_h5.cpp  lifted_multicut_h5_grid.cpp  lifted_multicut_text.cpp  multicut_higher_order.cpp  multicut_higher_order_bicycle_wheel.cpp  multicut_higher_order_odd_wheel.cpp  multicut_opengm_srmp_cycle.cpp  multicut_opengm_srmp_cycle_odd_wheel.cpp  multicut_opengm_srmp_cycle_odd_wheel_odd_bicycle_wheel.cpp  multicut_srmp.cpp
